# AutoClicker

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
configs/: default.json
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/core/: ClickEngine.cpp  ClickEngine.h  PlatformAdapter.h  WindowsPlatformAdapter.cpp  WindowsPlatformAdapter.h
src/utils/: ConfigManager.cpp  ConfigManager.h
